# discord-event-board

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  loggers.py  main.py  pyproject.toml
app/: vos.py
templates/: event_board.html
tests/: acceptance.py  test_unit.py  unit.py
tests/unit/: test_schedule_event_vo.py
